--- a/React/src/index.css
+++ b/React/src/index.css
@@ -1,9 +1,28 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body * {
-    font-size: 24px;
+  font-size: 24px;
+}
+
+input,
+textarea {
+  outline: none !important;
+}
+
+button {
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  font-weight: 600;
+  border-radius: 5px;
+  border: 1px solid black;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
 }
